css: fix styles to center on mobile

--- a/index.css
+++ b/index.css
@@ -1,13 +1,11 @@
 body{
     margin: 0.4em 0;
-    width: fit-content;
-    overflow-x: hidden;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 }
+
 .section-1{
     background:#0b2840;
     padding: 4em;
-    width: 100vw;
     left: 0;
     transform: skewY(-4deg);
 }
